# lingomage

./: README.md  pyproject.toml  xcompile.py
examples/: fizzbuzz.py  json_loader.py
src/: lingomage.py  xcompile.py
