[tool.poetry]
name = "lingomage"
version = "0.1.0"
description = "Convert your code from one langauge to another, using LLMs"
authors = ["Daniel Jacobs <djacobs7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.4"
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
